packages/isar_community_generator/test/errors/class/enum.dart
// only classes

import 'package:isar_community/isar_community.dart';

// ignore: invalid_annotation_target - annotation intentionally applied to enum for testing error handling
@collection
enum Test { a, b, c }
